bin_PROGRAMS = projectzero
projectzero_SOURCES = \
	app.cpp app.h \
	tree.cpp tree.h \
	draw.cpp draw.h \
	render.cpp render.h \
	projectfile.cpp projectfile.h \
	intern.cpp intern.h globals.h \
	page.cpp page.h \
	pageviewer.cpp pageviewer.h \
	blocks.cpp blocks.h

LIBS = @XSLT_LIBS@ @XML_LIBS@ @WX_LIBS@
CPPFLAGS = @XSLT_CFLAGS@ @XSLT_CFLAGS@ @WX_CFLAGS@
